--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 type="submit"
                 class="btn btn-primary"
                 onclick="handleSubmit()"
+                data-bs-dismiss="modal"
               >
                 Save changes
               </button>
